fixed squishing on amsterdam pic

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -49,7 +49,7 @@ body{
 }
 .amster{
     width:75%;
-    height: 1100px;
+    height: auto;
 }
 #experience{
     color: snow;
